*SVN*

* Add CachingTools::HashCaching to simplify the creation of nested, autofilling hashes. [Nicholas Seckar]

* Remove a hack intended to avoid unloading the same class twice, but which would not work anyways. [Nicholas Seckar]

* Update Object.subclasses_of to locate nested classes. This affects Object.remove_subclasses_of in that nested classes will now be unloaded. [Nicholas Seckar]

* Update Object.remove_subclasses_of to use Class.remove_class, reducing duplication. [Nicholas Seckar]

* Added Fixnum#seconds for consistency, so you can say 5.minutes + 30.seconds instead of 5.minutes + 30 #4389 [François Beausoleil]

* Added option to String#camelize to generate lower-cased camel case by passing in :lower, like "super_man".camelize(:lower) # => "superMan" [DHH]

* Added Hash#diff to show the difference between two hashes [Chris McGrath]

* Added Time#advance to do precise time time calculations for cases where a month being approximated to 30 days won't do #1860 [Rick Olson]

* Enhance Inflector.underscore to convert '-' into '_' (as the inverse of Inflector.dasherize) [Jamis Buck]

* Switched to_xml to use the xml schema format for datetimes.  This allows the encoding of time zones and should improve operability. [Koz]

* Added a note to the documentation for the Date related Numeric extensions to indicate that they're
approximations and shouldn't be used for critical calculations. [Koz]

* Added Hash#to_xml and Array#to_xml that makes it much easier to produce XML from basic structures [DHH]. Examples:

    { :name => "David", :street_name => "Paulina", :age => 26, :moved_on => Date.new(2005, 11, 15) }.to_xml
    
  ...returns:

      <person>
        <street-name>Paulina</street-name>
        <name>David</name>
        <age type="integer">26</age>
        <moved-on type="date">2005-11-15</moved-on>
      </person>

* Moved Jim Weirich's wonderful Builder from Action Pack to Active Support (it's simply too useful to be stuck in AP) [DHH]
