@@ -1,3 +1,5 @@
 require File.dirname(__FILE__) + '/module/inclusion'
 require File.dirname(__FILE__) + '/module/attribute_accessors'
 require File.dirname(__FILE__) + '/module/delegation'
+require File.dirname(__FILE__) + '/module/introspection'
+require File.dirname(__FILE__) + '/module/loading'
